<resources>
    <string name="app_name">ShoeStoreProject</string>
    <string name="button">Button</string>
    <string name="singup">Singup</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_shoestore">Welcome to ShoeStore</string>
    <string name="the_shoe_store_with_all_the_latest_goodies_in_sports">The Shoe Store with all the latest goodies in sports</string>
    <string name="please_click_to_continue">Please click to continue</string>
    <string name="continue_">Continue</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="test">Test</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="description">Description</string>
    <string name="size">Size</string>
    <string name="add_shoe">Add_shoe</string>
    <string name="textview">TextView</string>
    <string name="add_new_item_message_empty">The List is empty! Try adding a new item by clicking on the plus sign at the bottom right corner!</string>
    <string name="add_new_item">Add new item</string>
    <string name="instructions_fragment">instructions_fragment</string>
    <string name="shoelistingfragment">shoeListingFragment</string>
    <string name="loginfragment">logInFragment</string>
    <string name="toolbar_that_serves_as_appbar_with_navigation">Toolbar that serves as Appbar with navigation</string>
    <string name="child_fragments_are_viewed_here">Child Fragments are viewed here</string>
    <string name="button_to_go_to_listing">Button to go to listing</string>
    <string name="sign_up_button_to_move_to_welcome_screen">Sign Up button to move to welcome screen</string>
    <string name="sign_in_button_to_move_to_welcome_screen">Sign In button to move to welcome screen</string>
    <string name="move_to_instructions">move to instructions</string>
    <string name="shoe_name">Shoe name:</string>
    <string name="shoe_size">Shoe size:</string>
    <string name="shoe_brand">Shoe brand:</string>
    <string name="shoe_description">Shoe Description:</string>
    <string name="add_shoe_">Add Shoe</string>
    <string name="cancel_add">Cancel add</string>
    <string name="cancel">Cancel</string>
    <string name="to_go_to_listing">to go to listing</string>
    <string name="to_add_a_new_shoe_please_follow_these_steps">To add a new shoe please follow these steps</string>
    <string name="to_add_a_new_shoe_please_follow_these_steps_">To add a new shoe please follow these steps:</string>
    <string name="_1_click_on_continue_to_go_to_the_shoe_listing_screen">1- Click on continue to go to the shoe listing screen</string>
    <string name="_2_on_the_next_screen_click_on_the_plus_sign">2- On the next screen click on the \'plus\' sign</string>
    <string name="_3_you_will_be_directed_to_a_third_screen_where_you_will_be_able_top_enter_the_shoe_information">3- You will be directed to a third screen where you will be able top enter the shoe information</string>
    <string name="_4_once_the_information_filled_just_simply_click_add_shoe">4- Once the information filled just simply click \'Add shoe\'</string>
</resources>